After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749382 - vaapisink: error handling if rendering fails
vaapisink: error handling if rendering fails
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 743569
 
 
Reported: 2015-05-14 14:38 UTC by Víctor Manuel Jáquez Leal
Modified: 2015-06-22 15:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapisink: error handling if rendering fails (2.20 KB, patch)
2015-05-14 14:38 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2015-05-14 14:38:36 UTC
This patch enhance the code path when an error is found when rendering a
buffer.

If the video meta doesn't contain a surface proxy or a surface, a warning
message is printed.

If the rendering backend fails, a error message is posted in the bus.
Comment 1 Víctor Manuel Jáquez Leal 2015-05-14 14:38:41 UTC
Created attachment 303373 [details] [review]
vaapisink: error handling if rendering fails
Comment 2 sreerenj 2015-06-19 09:03:20 UTC
Review of attachment 303373 [details] [review]:

I would prefer no-surface/no-proxy case as an ERROR , not a Warning... :) WDT?
Comment 3 Víctor Manuel Jáquez Leal 2015-06-19 09:28:35 UTC
(In reply to sreerenj from comment #2)
> Review of attachment 303373 [details] [review] [review]:
> 
> I would prefer no-surface/no-proxy case as an ERROR , not a Warning... :)
> WDT?

I don't have a strong opinion, but I think that the problem of no-surface/no-proxy belongs to upstream, not to the sink, so it shouldn't post an error, or break the pipeline, though I'm not sure.
Comment 4 sreerenj 2015-06-22 13:13:47 UTC
Review of attachment 303373 [details] [review]:

Okay, Lets push this..
Comment 5 Víctor Manuel Jáquez Leal 2015-06-22 15:10:37 UTC
Attachment 303373 [details] pushed as 0df96e1 - vaapisink: error handling if rendering fails